--- a/HTML_CSS/google-homepage/style.css
+++ b/HTML_CSS/google-homepage/style.css
@@ -1,56 +1,43 @@
-#nav-left {
-    float:left;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
 }
 
-#nav-right {
-    float: right;
+.nav-container {
+    display: flex;
+    flex-direction: space-between;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    left: 0px;
+    top: 0px;
 }
 
-.logo {
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20%;   
-}
-
-.search {
-
-
+.nav-container a {
+    text-decoration: none;
+    color: inherit;
 }
 
 
-#searchbar {
-  position: absolute;
-  top: 260px;
-  left: 375px;
-  width: 580px;
-  height: 30px;
-  border: 1px solid #cdcdcd;
+/* Nav bar links */
 
+.nav-bar-left {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
 }
 
-#search_button {
-    position: absolute;
-    top: 310px;
-    left: 550px;
-    border: 1px solid #dcdcdc;
-    border-color: rgba(0, 0, 0, 0.1);
-    color: #444!important;
-    font-size: 11px;
-    font-weight: bold;
-    padding: 8px;
-    background: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
-    border-radius: 2px;
-  }
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.nav-bar-right {
+    flex-grow: 0.1;
 }
 
-li {
-    display: block;
-    padding: 8px;
+.nav-container li {
+    display: inline-block;
+    margin: 0 5px;
+    font-size: 15px;
+}
+
+.nav-container li:hover {
+    text-decoration: underline;
 }
