--- a/HTML_CSS/google-homepage/style.css
+++ b/HTML_CSS/google-homepage/style.css
@@ -1,5 +1,12 @@
-body {
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
 }
@@ -14,9 +21,14 @@ body {
     top: 0px;
 }
 
-.nav-container a {
+a {
     text-decoration: none;
     color: inherit;
+}
+
+li:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 
@@ -26,18 +38,76 @@ body {
     flex-grow: 1;
     display: flex;
     align-items: center;
+    padding-left: 25px;
+    padding-top: 10px;
 }
 
 .nav-bar-right {
-    flex-grow: 0.1;
+    display: flex;
+    padding-left: 25px;
+    padding-top: 10px;
 }
 
 .nav-container li {
     display: inline-block;
     margin: 0 5px;
-    font-size: 15px;
+    font-size: 13px;
 }
 
-.nav-container li:hover {
-    text-decoration: underline;
+.content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+
+.content-container .form-container form {
+    position: relative;
+}
+
+.content-container .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 45vh;
+    width: auto;
+    padding-top: 60px;
+}
+
+.logo img {
+    width: auto;
+    height: auto;
+}
+
+.form-container {}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0;
+    background-color: #eee;
+    border: 2px solid red;
+}
+
+.footer .Info {}
+
+.footer.Message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
